--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -66,6 +66,11 @@
     align-self: center;
 }
 
+.Social a:hover,
+.Social a:active {
+
+}
+
 
 ion-icon {
     font-size: 48px;
@@ -73,11 +78,26 @@ ion-icon {
     text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.8);
 }
 
+ion-icon[name=logo-linkedin],
+ion-icon[name=logo-github],
+ion-icon[name=mail] {
+    transition: color 0.2s;
+}
+
+ion-icon[name=logo-linkedin]:hover {
+    color: #0072b1;
+}
+
+ion-icon[name=logo-github]:hover {
+    color: #6e5494;
+}
+
+ion-icon[name=mail]:hover {
+    color: #ababab;
+}
 .bottom_nav_button {
     text-align: center;
 }
 .large_icon {
     font-size: 12px;
 }
-
-
