--- a/src/components/ContactSource.module.css
+++ b/src/components/ContactSource.module.css
@@ -38,3 +38,39 @@
 .contactSource a:active {
     color: #00ddd290;
 }
+
+@media (max-width: 480px) {
+
+    .contactSource{
+        color: white;
+        text-align: center;
+        width: 100px;
+        margin: 10px 10px;
+        font-size: 75%;
+        width: 100%;
+    }
+    
+    .contactSource ion-icon {
+        font-size: 32px;
+        margin-bottom: 5px;
+    }
+    
+    .contactSource h4 {
+        color: #00ddd2;
+        font-size: 100%;
+        font-weight: 400;
+        text-transform: capitalize;
+    }
+    
+    .contactSource p {
+        font-size: 80%;
+        max-width: 100%;
+    }
+
+    .contactSource a {
+        transition: color 0.2s;
+        color: white;
+        text-decoration: none;
+        max-width: 100%;
+    }
+}
