--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -26,7 +26,6 @@
   text-align: center;
 }
 
-
 .Home_box h1 {
   font-size: 400%;
   font-weight: 400;
@@ -34,7 +33,7 @@
   color: white;
   word-spacing: 10px;
   letter-spacing: 2px;
-  text-shadow: 2px 3px 1px #2b2b2b
+  text-shadow: 2px 3px 1px #2b2b2b;
 }
 
 .Home_box h3 {
@@ -119,9 +118,53 @@
   color: #e1e1e1;
   text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.8);
   font-size: 48px;
-  }
+}
 
 .large_icon {
   font-size: 48px;
 }
 
+@media (max-width: 480px) {
+
+  .Home_box {
+    width: 100%;
+    margin: 0;
+    padding-top: 50px !important;
+    justify-content: space-around;
+  }
+
+  .Home_box h1 {
+    width: 90%;
+    margin-left: 5%;
+    font-size: 200%;
+    font-weight: 300;
+    line-height: 120%;
+    color: white;
+    word-spacing: 10px;
+    letter-spacing: 2px;
+    text-shadow: 2px 3px 1px #2b2b2b;
+  }
+
+  .Home_box h3 {
+    line-height: 120%;
+    margin-top: 30px;
+    font-size: 90%;
+    color: #e1e1e1;
+  }
+
+  .Social {
+    display: flex;
+    align-items: stretch; /* Default */
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 32px;
+    width: 50%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    height: 200px;
+  }
+
+  .Social li {
+    margin: 10px 20px;
+  }
+}
