--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,21 +1,28 @@
 /* Navigation Bar */
 .Navbar {
   height: 50px;
-  z-index: 9998;
-  margin: 0 20%;
+  z-index: 9999;
   text-align: center;
+  position: absolute;
+  padding: 0 20%;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .logo {
   border-radius: 50%;
-  width: 45px;
-  height: 45px;
+  width:40px;
+  height: 40px;
   display: inline-block;
-  margin: auto 0;
+  float: left;
+  margin-top: 25px;
+  transform: translateY(-50%);
 }
 .navItems {
   display: flex;
   height: 50px;
+  margin: 0;
   justify-content: space-evenly;
   vertical-align: middle;
 }
@@ -61,13 +68,130 @@
   box-shadow: 0 2px 2px #383838;
 }
 
-
-
-.stickyActive {
-  color: #00ddd2;
-  transition: color 0.2s;
-}
-
 .hidden {
   display: none;
+}
+
+.navbar_name {
+  display:none;
+  color: white;
+}
+
+.hamburgerIcon {
+  display: none;
+}
+
+.sideDrawer {
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .Navbar, .sticky {
+    position: fixed;
+    text-align: left;
+    height: 50px;
+    z-index: 9999;
+    padding: 0 0;
+    margin: 0 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(55, 55, 55);
+    box-shadow: 0 1px 1px #040404;
+  }
+
+  .logo {
+    position: absolute;
+    display: block;
+    float: none;
+    margin: 0 0;
+    top: 25px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  /* .navItems {
+    position: ;
+    flex-flow: column;
+    vertical-align: left;
+    padding-top: 30px;
+    padding-left: 50px;
+    height: 100%;
+    width: 100%;
+  }
+
+  .navItem {
+    margin: 0 0;
+    font-size: 75%;
+    font-weight: 400;
+    transition: color 0.4s;
+    letter-spacing: 1px;
+    width: 100%;
+    height: 20px;
+  }
+
+  .navItems li {
+    margin: 10px 0;
+  } */
+
+  .navbar_name {
+    display: inline-block;
+    font-size: 80%;
+    float: right;
+    color: white;
+    margin-top: 25px;
+    margin-right: 15px;
+    transform: translateY(-50%);
+  }
+
+  .hamburgerIcon {
+    display: inline-block;
+    float: left;
+  }
+  .hamburgerIcon ion-icon {
+    color:aliceblue;
+    margin-top: 25px;
+    transform: translateY(-50%);
+    margin-left: 20px;
+    font-size: 250%;
+  }
+
+  .sideDrawer {
+    display: block;
+    position: absolute;
+    top: 51px;
+    left: 0;
+    /* padding-left: 50%; */
+    background-color: rgb(55, 55, 55);
+    width: 150px;
+    height: 300px;
+    box-shadow: 0 1px 1px #040404;
+  }
+
+  .standardNav {
+    display: none;
+  }
+
+  .navItems {
+    position: absolute;
+    top: 50;
+    left: 0;
+    flex-flow: column;
+    height: 300px;
+    justify-content: space-evenly;
+    width: 150px;
+  }
+  .navItems li:first-child {
+    margin-left: 30px;
+  }
+  .navItems li {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 30px;
+  }
+  
+  .navItem {
+    font-weight: 300;
+    width: 100%;
+  }
 }
