Updated styling for contact sources in contact section

--- a/src/components/ContactSource.module.css
+++ b/src/components/ContactSource.module.css
@@ -1,8 +1,8 @@
 .contactSource{
     color: white;
     text-align: center;
-    width: 200px;
-    margin: 10px 10px;
+    width: 50%;
+    margin: 10px 0;
 }
 
 .contactSource ion-icon {
