--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -1,11 +1,18 @@
 .experienceSection {
-    background-color: rgb(14, 14, 14);
-    min-height: 100vh;
-    padding-bottom: 20px;
+  background-color: rgb(14, 14, 14);
+  min-height: 100vh;
+  padding-bottom: 20px;
 }
 
 .experienceBox {
-    color: white;
-    width: 80%;
-    margin-left: 10%;
+  color: white;
+  width: 80%;
+  margin-left: 10%;
+}
+
+@media (max-width: 480px) {
+  .experienceBox {
+    width: 90%;
+    margin-left: 5%;
+  }
 }
