--- a/src/components/Experience/ExperienceItem/ExperienceItem.module.css
+++ b/src/components/Experience/ExperienceItem/ExperienceItem.module.css
@@ -1,3 +1,65 @@
 .ExperienceItem {
+  list-style: none;
+  padding-top: 20px;
+  width: 100%;
+}
 
+.ExperienceItem ion-icon {
+  font-size: 36px;
+  max-width: 36px;
+  padding-right: 10px;
+  margin-left: -46px;
+}
+
+.ExperienceBody {
+  flex-flow: row;
+  width: 100%;
+}
+.Experience {
+  width: 100%;
+  display: flex;
+  list-style: none;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ExperienceLocationDate {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.ExperienceLocationDate h4,
+h5 {
+  display: inline-block;
+}
+
+.ExperienceLocationDate h5 {
+  padding-top: 4px;
+}
+
+.Experience .Duty {
+  list-style: disc;
+  font-size: 80%;
+  padding-left: 20px;
+}
+
+.Experience .Duty::marker {
+  text-indent: 10px;
+}
+
+.ExperienceBody .subDetails {
+  color: #a0a0a0;
+}
+
+.ExperienceBody .subDetails li::marker {
+  color: white;
+}
+
+@media (max-width: 500px) {
+  .Experience {
+    font-size: 80%;
+    flex-flow: column;
+  }
 }
