--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,3 +1,12 @@
 .projectsBox {
-    /* min-height: 100vh; */
+  min-height: 100vh;
+  background-color: black;
+  color: white;
+}
+
+.UnderCon {
+  background-color: transparent;
+  max-width: 80%;
+  margin-left: 10%;
+  margin-top: 50%;
 }
