Centered image in Profile section and fixed link from nav bar to Projects

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -6,7 +6,8 @@
 
 .UnderCon {
   background-color: transparent;
-  max-width: 80%;
-  margin-left: 10%;
-  margin-top: 50%;
+  width: 50%;
+  margin-left: 50%;
+  margin-top: 20px;
+  transform: translate(-50%);
 }
