--- a/src/index.css
+++ b/src/index.css
@@ -4,28 +4,32 @@
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Lato', 'Arial', sans-serif;
+html,
+body {
+  font-family: "Lato", "Arial", sans-serif;
   font-size: 20px;
   font-weight: 300;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
   background-color: rgb(233, 233, 233);
+  width: 100%;
 }
 
-.clearfix {zoom: 1}
+.clearfix {
+  zoom: 1;
+}
 .clearfix:after {
-  content: '.';
+  content: ".";
   clear: both;
   display: block;
   height: 0;
   visibility: hidden;
 }
 
-h1, 
+h1,
 h2 {
-    font-weight: 300;
-    text-transform: uppercase;
+  font-weight: 300;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -34,24 +38,20 @@ h3 {
 }
 
 h1 {
-    margin: 0;
-    font-size: 240%;
-    word-spacing: 3px;
-    letter-spacing: 1px;
+  margin: 0;
+  font-size: 240%;
+  word-spacing: 3px;
+  letter-spacing: 1px;
 }
 
 h2 {
-    font-size: 180%;
-    word-spacing: 2px;
-    text-align: center;
-    letter-spacing: 2px;
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  letter-spacing: 2px;
 }
-
-
 
 h3 {
-    font-size: 110%;
-    letter-spacing: 2px;
+  font-size: 110%;
+  letter-spacing: 2px;
 }
-
-
