--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,10 +1,17 @@
-.projectsBox {
+.projects_section {
+  width: 100%;
   min-height: 100vh;
   background-color: black;
   color: white;
 }
+.projects_summaries {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
 
-.UnderCon {
+.under_construction {
   background-color: transparent;
   width: 50%;
   margin-left: 50%;
