Changed styling for Project component so the entire background was black

--- a/src/components/Projects/Project/Project.module.css
+++ b/src/components/Projects/Project/Project.module.css
@@ -1,5 +1,10 @@
 .content {
   padding-top: 40px;
-  background-color: black;
   color: white;
+  height: 100%;
+}
+
+.project {
+  min-height: 100vh;
+  background-color: black;
 }
