--- a/src/components/Projects/Project/EightPuzzle/EightPuzzle.module.css
+++ b/src/components/Projects/Project/EightPuzzle/EightPuzzle.module.css
@@ -1,6 +1,7 @@
 .eight_puzzle_project {
   width: 80%;
   margin-left: 10%;
+  height: 100%;
 }
 
 .eight_puzzle_project h4 {
@@ -48,7 +49,7 @@
 
 .button_row {
   display: flex;
-  flex-flow: row;
+  flex-flow: row wrap;
   justify-content: center;
 }
 
